# gamejam2024

./: Cargo.toml  Dockerfile  README.md  index.html
src/: lib.rs  main.rs  menu.rs
src/game/: bullet.rs  butterfly.rs  camera.rs  components.rs  map.rs  maps.rs  mod.rs  player.rs  powerups.rs  reflection.rs  reflections.rs
src/geometry/: circle.rs  croppable.rs  mod.rs  point.rs  polygon.rs  reflectable.rs  segments.rs  utils.rs
src/menus/: mod.rs
