[package]
name = "gamejam2024"
version = "0.1.0"
edition = "2021"


[lib]
name = "gamejam2024"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "bin"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2"
bevy_rapier2d = { version = "0.24", features = [ "wasm-bindgen" ] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
bevy = "0.12"
