[package]
name = "gamejam2024"
version = "0.1.0"
edition = "2021"

[lib]
name = "gamejam2024"
path = "src/lib.rs"

[target.'cfg(target_arch = "wasm32")'.lib]
crate-type = ["cdylib"]

[[bin]]
name = "bin"
path = "src/main.rs"

[dependencies]
bevy = "0.12"
rand = "0.8.5"
uuid = { version = "1", features = ["rng"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
bevy_rapier2d = { version = "0.24", features = ["wasm-bindgen"] }
uuid = { version = "1", features = ["rng-getrandom"] }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_rapier2d = { version = "0.24" }
